--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,25 @@
-management.endpoints.web.exposure.include=*
-spring.main.web-application-type=servlet
-spring.config.import=optional:vault://,\
-  classpath:my[.properties],\
-  optional:configtree:/Users/Uno/Documents/github/fastcampus-spring-boot-practice/src/main/resources/tree/,\
-  optional:configserver:http://localhost:8081/
-
 spring.profiles.active=test
 server.port=8080
-debug=true
+# debug=true
+
+management.endpoints.web.exposure.include=*
+spring.main.web-application-type=none
+# 3. boot-2.4
+# vault:private information management(Set access password)
+spring.config.import=optional:vault://,\
+  optional:classpath:my[.properties],\
+  optional:configtree:/Dev/workspace/spring-boot-practice/src/main/resources/tree/,\
+  optional:configserver:http://localhost:8081/
 
 my.height=170
+
+spring.cache.type=none
+spring.cache.port=6379
+#---
+
+# profile
+# spring.config.activate.on-profile=test
+iam.duration=5s
 
 # Spring Cloud Vault 관련 설정
 #spring.application.name=fast-campus
@@ -26,5 +36,4 @@ my.height=170
 
 #---
 
-spring.config.activate.on-profile=fastcampus | test
-iam.duration=5s
+
